# edge-maxxing

./: .gitignore  README.md  min_compute.yml  pyproject.toml
.github/workflows/: poetry-update.yaml  pytype-base.yaml  pytype-miner.yaml  pytype-neuron.yaml  pytype-validator.yaml
base/: pyproject.toml
base/base/: checkpoint.py  config.py  contest.py  device.py  inputs_api.py  network_commitments.py  output_comparator.py  submissions.py  substrate_handler.py  system_info.py
base/testing/: benchmarker.py  blacklist.sh  clear_cache.sh  clone.sh  download_huggingface_models.py  download_huggingface_models.sh  inference_sandbox.py  start_inference.sh  sync_uv.sh  system_monitor.py  vram_monitor.py
miner/: Dockerfile  README.md  pyproject.toml
miner/inference/: api.py  pipeline.py  requirements.txt
miner/miner/: __init__.py  benchmarker.py  download_models.py  main.py  miner.py  submit.py
miner/src/: main.py
miner/src/miner/: main.py
neuron/: pyproject.toml
neuron/neuron/: __init__.py  bt.py  checkpoint.py  compare_checkpoints.py  config.py  contest.py  coreml_pipeline.py  device.py  generate_random_prompt.py  network_commitments.py  neuron.py  output_comparator.py  pipeline.py  random_inputs.py  submissions.py  vram_monitor.py
neuron/neuron/submission_tester/: __init__.py  blacklist.sh  cache.sh  clear_cache.sh  clone.sh  dependency_install.sh  download_huggingface_model.sh  download_huggingface_models.sh  hash.py  inference_sandbox.py  metrics.py  pip_install.sh  poetry_install.sh  setup_inference_sandbox.py  start_inference.sh  sync_uv.sh  testing.py  vram_monitor.py
neuron/neuron/tester/: __init__.py  clone.sh  lfs_pull.sh  setup_inference_sandbox.py
neuron/src/: neuron.py
neuron/src/neuron/: neuron.py  pipeline.py
neuron/submission_tester/: __init__.py
pipelines/: pyproject.toml
pipelines/pipelines/: models.py
tests/: pyproject.toml
tests/test_data/: 2024-11-29.json  2024-11-30.json  2024-12-01.json  2024-12-02.json  2024-12-03.json  2024-12-04.json  2024-12-13.json  2024-12-14.json  2024-12-15.json
tests/tests/: test_validator.py  test_winner_selection.py
tests/visualize/: plot_data.py
validator/: .dockerignore  README.md  auto-update.sh  compose-gpu-layout.json  compose.yaml  generate_compose.py  initialize-auto-update.sh  initialize-docker-auto-update.sh  poetry.toml  pyproject.toml  update-docker.sh
validator/base_validator/: __init__.py  api_data.py  auto-update.sh  auto_updater.py  hash.py  metrics.py  telemetry.py
validator/mock_tester/: api.py
validator/src/: compare_checkpoints.py  validator.py
validator/src/validator/: validator.py
validator/submission_tester/: Dockerfile  __init__.py  api.py  benchmarker.py  entrypoint.sh  inference_sandbox.py  main.py  random_inputs.py  setup.sh  setup_inference_sandbox.sh  start.sh  start_inference_sandbox.sh  testing.py  update.sh  vram_monitor.py
validator/validator/: __init__.py  compare_checkpoints.py  diagnostics.py  main.py  metrics.py  validator.py  wandb_args.py
validator/weight_setting/: Dockerfile  benchmarking_api.py  contest_state.py  deduplication.py  diagnostics.py  entrypoint.sh  start.sh  state_manager.py  substrate_handler.py  telemetry_attributes.py  validator.py  validator_args.py  wandb_args.py  wandb_manager.py  weight_setter.py  winner_selection.py
