[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-maxxing-base"
description = "The base neuron which validators & miners inherent from"
requires-python = ">=3.10,<3.13"
version = "1.0.0"
dependencies = [
    "edge-maxxing-pipelines==1.0.0",
    "fiber @ git+https://github.com/rayonlabs/fiber.git@1.0.0#egg=fiber[chain]",
    "opentelemetry-instrumentation>=0.49b2",
    "transformers>=4.46.3",
    "diffusers>=0.31.0",
    "accelerate>=1.1.1",
    "pynvml>=11.5.3",
    "scikit-image>=0.24.0",
    "opencv-python>=4.10.0.84",
    "gitpython>=3.1.43",
]

[tool.uv.sources]
edge-maxxing-pipelines = { path = "../pipelines", editable = true }

[dependency-groups]
dev = [
    "pytype==2024.10.11"
]

[tool.pytype]
inputs = [
    "base",
    "testing",
]

[tool.setuptools]
packages = [
    "base",
    "testing",
]
