[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-maxxing-miner"
description = "The miner which provides optimized models and checkpoints"
requires-python = ">=3.10,<3.13"
version = "1.0.0"
dependencies = [
    "edge-maxxing-neuron==1.0.0"
]

[tool.uv.sources]
edge-maxxing-neuron = { path = "../neuron", editable = true }

[dependency-groups]
dev = [
    "pytype==2024.10.11"
]

[tool.pytype]
inputs = ["miner"]

[project.scripts]
submit_model = 'miner.submit:main'

[tool.setuptools]
packages = [
    "miner",
]
