[tool.poetry]
name = "edge-maxxing-neuron"

version = "1.0.0"

description = "The base neuron which validators & miners inherent from"

readme = "../README.md"

license = "MIT"

authors = ["WOMBO <hello@w.ai>"]

packages = [{ include = "neuron" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fiber = { git = "https://github.com/womboai/fiber", branch = "weights" }
GitPython = "3.1.43"
nltk = "3.9.1"
torch = "2.4.1"
pynvml = "11.5.3"
diffusers = "0.30.3"
transformers = "4.44.2"
accelerate = "0.34.2"
omegaconf = "2.3.0"
torchvision = "0.19.1"
scikit-image = "0.24.0"
opencv-python = "4.10.0.84"
edge-maxxing-pipelines = { path = "../pipelines", develop = true }

[tool.poetry.dev-dependencies]
pytype = "2024.4.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-monorepo.deps]

[tool.pytype]
inputs = ["neuron"]
