[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-maxxing-pipelines"
description = "Holder for models & constants to be accessed by multiple repositories"
requires-python = ">=3.10,<3.13"
version = "1.0.0"
dependencies = [
    "pydantic>=2"
]

[tool.uv]
dev-dependencies = [
    "pytype==2024.10.11",
]

[tool.pytype]
inputs = ["pipelines"]
