[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-maxxing-validator"
description = "The validator which checks models and checkpoints provided by miners"
requires-python = ">=3.10,<3.13"
version = "1.0.0"
dependencies = [
    "wandb==0.18.1",
    "websockets==13.1",
    "aiohttp==3.10.6",
    "safetensors==0.4.5",
    "edge-maxxing-neuron==1.0.0"
]

[tool.uv.sources]
edge-maxxing-neuron = { path = "../neuron", editable = true }

[dependency-groups]
dev = [
    "pytype==2024.10.11"
]

[tool.pytype]
inputs = ["base_validator", "submission_tester", "weight_setting"]

[project.scripts]
start_validator = 'weight_setting.validator:main'

[tool.setuptools]
packages = [
    "base_validator",
    "submission_tester",
    "weight_setting"
]
